--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>食记 · Carol</title>
+  <title>Nichijou · yamasakiii</title>
   <meta name="description" content="记录三餐、导入与查询菜谱的轻量应用">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
