--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="site-title">食记 · Carol</div>
+    <div class="site-title">Nichijou · yamasakiii</div>
     <nav class="nav-tabs" role="tablist">
       <button class="tab-btn is-active" data-route="#/meals" aria-selected="true">三餐</button>
       <button class="tab-btn" data-route="#/recipes" aria-selected="false">菜谱</button>
